Fix issue: - fix real time update for [ADD, DECLINE, BLOCK, PENDING, BLOCK] a friend - fix last message datetime it is now on Singapore timezone +8:00 instead of +0:00

--- a/asg-chatapp-react/src/css/app.css
+++ b/asg-chatapp-react/src/css/app.css
@@ -567,6 +567,10 @@ ul {
   justify-content: flex-start;
   align-items: center;
   position: relative;
+  cursor: pointer;
+}
+.main-container > .main-two .main-header > .dropdown .dropdown-list li:hover {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .main-container > .main-two .main-header > .dropdown .dropdown-list li i {
   position: absolute;
